# toolrecall

./: --help  .dockerignore  .gitignore  .mcp_benchmark_results.json  ARCHITECTURE.md  AUDIT_AND_ROADMAP.md  BENCHMARK.md  BENCHMARK_REPORT.md  BRANCH_STRATEGY.md  BYPRODUCTS.md  CHANGELOG.md  Dockerfile  Dockerfile.test  ENTERPRISE_SCALE.md  LATENCY_PITCH.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_AUDIT.md  STEALTH_VISION.md  TROUBLESHOOTING.md  benchmark_stats.txt  docker-compose.yml  pyproject.toml  requirements.txt  security-audit-semgrep.json  setup.sh
.github/workflows/: ci.yml
bench/: README.md  SKILL.md  agent.py  analyze.py  cache_honest.py  interleave.py  micro_benchmark_results.json  micro_cache.py  probes.py  run_arm.py  single.py  test_context_limit.py  test_deepseek_limit.py  test_gemini.py  test_gemini2.py  test_openrouter_limit.py  test_or_model.py  turnlog.py  watch_and_analyze.py  workloads.py
browser-extension/: README.md  package.json  tsconfig.json  wxt.config.ts
browser-extension/scripts/: test-on-windows.ps1
browser-extension/src/: dnr-rules.ts  firefox-adapter.ts  page-extractor.ts  toolrecall-client.ts  types.ts
browser-extension/src/entrypoints/: background.ts  page-extractor.content.ts
browser-extension/tests/: page-extractor.test.ts  toolrecall-client.test.ts
configs/: README.md  aider-mcp.json  claude-code.json  opencode.jsonc
demo_shm/: demo_memory.py  demo_scale.py  demo_shm.py  demo_uds.py  impact_estimate.py  shm_analysis.md
docker/: entrypoint.sh  supervisord.conf
docs/: AGENT_COMPATIBILITY.md  APPENDIX.md  APPLICATIONS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BENCHMARK.md  BOTTLENECK_SOLVED.md  BROWSER_CACHE.md  BROWSER_CACHE_SECURITY.md  BYPRODUCTS.md  CLI.md  CONFIG_REFERENCE.md  CONTEXT_STALE.md  CONTEXT_TRACKER.md  CTO_QUESTIONS.md  DATA_CENTER_SCALE.md  DOCKER.md  ENTERPRISE_SCALE.md  FORWARD_PROXY.md  HANDOFF_NEXT_SESSION.md  HERMES_TRANSPARENT_CACHE.md  HOW_IT_WORKS.md  KNOWLEDGE_DB.md  LATENCY_PITCH.md  LIBSQL_COMPARISON.md  MCP_MULTIPLEXER.md  MCP_PYTHON_REPORT.md  MEASURED_BENCHMARKS.md  NORMALIZER.md  OSI_LAYERS.md  PITCH.md  PITCH_SUMMARY.md  README.md  REAL_AGENT_BENCHMARK.md  REPLAY_MODE.md  REQUEST_TRANSFORM.md  ROI_AND_SAVINGS.md  STEALTH_VISION.md  TESTING.md  TROUBLESHOOTING.md  (+11 more)
examples/: hermes-plugin.py  http-proxy-usage.py  python-dataset-export.py  python-import-terminal.py  python-import.py  python-mcp-client.py
examples/claude-desktop/: claude_desktop_config.json
examples/cursor/: README.md
examples/hermes-skill/: SKILL.md
examples/mcp-inspector/: README.md
go-client/: README.md  go.mod  main.go  tr
references/: github-auth-permanent-fix.md
scripts/: proxy_usage_query.py  publish.sh  savings.py  setup.sh  toolrecall-daemon.service  uninstall-test-setup.py  uninstall-test.Dockerfile  uninstall.py  update.py
tests/: CLIENT_INTEGRATION_TESTS.md  README.md  _test_daemon_subprocess.py  benchmark_mcp.py  benchmark_on2.py  benchmark_single_counting.py  benchmark_workload.py  conftest.py  e2e_helpers.py  run_memory_tests.py  test_adapters.py  test_ast_security.py  test_cache_safety.py  test_cli.py  test_client.py  test_cognitive_scan.py  test_context_stale.py  test_context_stale_security.py  test_context_tracker.py  test_daemon_pid_guard.py  test_dataset.py  test_e2e_adk_adapter.py  test_e2e_cache_socket.py  test_e2e_cli.py  test_e2e_client_daemon.py  test_e2e_daemon_lifecycle.py  test_e2e_langchain_adapter.py  test_e2e_proxy.py  test_e2e_shim.py  test_e2e_stress.py  test_file_cache.py  test_hermes_init.py  test_hermes_init_deferred.py  test_integration.py  test_libsql_local.py  test_libsql_sync.py  test_mcp_bridge.py  test_mcp_config.py  test_mcp_config_resolve.py  test_mcp_fetch.py  (+16 more)
toolrecall/: .config.toml.swp  __init__.py  __main__.py  _db.py  cache.py  cli.py  client.py  config.py  config.toml  context_tracker.py  daemon.py  dataset.py  docs.py  hermes_init.py  mcp_bridge.py  mcp_cache_fs.py  mcp_fetch.py  mcp_github.py  mcp_registry.py  mcp_seqthink.py  mcp_server.py  mcp_time.py  normalizer.py  proxy.py  proxy_config_section.txt  replay.py  replay_cli.py  shim.py  toml_serializer.py  tr_shim.pth  transport.py  turso_cli.py
toolrecall/adapters/: README.md  __init__.py  google_adk.py  herdr.py  langchain.py  odysseus.py
toolrecall/storage/: README.md  __init__.py  libsql.py  libsql_sync.py  sqlite.py
vscode-extension/: .vscodeignore  PLAN.md  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
vscode-extension/src/: cached-read.ts  extension.ts  proxy.ts  status.ts
