[build-system]
requires = ["setuptools>=68.0", "packaging", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolrecall"
version = "0.4.0"
description = "The Deterministic Tool Cache for LLM Agents — no LLM decides what to cache. SQLite FTS5, zero deps, MCP multiplexer, zero-trust WAF."
readme = "README.md"
authors = [
    {name = "Robin Schultka", email = "robin@robka.de"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tool-cache", "llm", "agent", "token-savings", "sqlite", "fts5"]
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
]

[project.optional-dependencies]
yaml = ["pyyaml >= 6.0"]
toml-write = ["tomli-w >= 1.0"]
dev = ["pytest >= 7.0", "flake8 >= 6.0"]

[project.urls]
Homepage = "https://github.com/whiskybeer/toolrecall"
Repository = "https://github.com/whiskybeer/toolrecall"
Documentation = "https://github.com/whiskybeer/toolrecall#readme"

[project.scripts]
toolrecall = "toolrecall.cli:main"

[tool.setuptools.packages.find]
include = ["toolrecall*"]
