[build-system]
requires = ["setuptools>=68.0", "packaging", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolrecall"
version = "0.8.14"
description = "The Deterministic Tool Cache for LLM Agents — no LLM decides what to cache. SQLite FTS5, zero deps, MCP multiplexer, zero-trust WAF."
readme = "README.md"
authors = [{name = "Robin Schultka", email = "robin@robka.de"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tool-cache", "llm", "agent", "token-savings", "sqlite", "fts5"]
requires-python = ">=3.11"
dependencies = []  # Zero runtime deps — pure Python stdlib
# Note: mcp_server.py has a fallback for optional FastMCP.
# Enable with: pip install toolrecall[mcp-fastmcp]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end tests that spawn a real daemon subprocess",
    "adk: Google ADK adapter tests (requires google-adk)",
    "adk_llm: Google ADK full agent tests (requires GEMINI_API_KEY)",
]

[project.optional-dependencies]
mcp-fastmcp = ["mcp>=1.0.0"]
yaml = ["pyyaml >= 6.0"]
toml-write = []  # No longer needed — built-in serializer replaces tomli-w
libsql = ["libsql-experimental>=0.0.55,<0.1"]
libsql-sync = ["pyturso>=0.1"]
dev = [
    "pytest >= 9.0",
    "ruff >= 0.1",
]

[project.urls]
Homepage = "https://github.com/whiskybeer/toolrecall"
Repository = "https://github.com/whiskybeer/toolrecall"
Documentation = "https://github.com/whiskybeer/toolrecall#readme"

[project.scripts]
toolrecall = "toolrecall.cli:main"

[tool.setuptools.packages.find]
include = ["toolrecall*"]

[tool.setuptools.package-data]
toolrecall = ["config.toml", "tr_shim.pth", "adapters/README.md"]
